[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgequeue"
version = "0.1.0"
description = "Queueing theory — M/M/1, M/M/c, Erlang, priority, network, staffing. Pure computation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Eric Wolters", email = "eric.wolters@svend.ai"}]
dependencies = [
    "scipy>=1.10",
    "forgecore",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]  # l, I are standard queueing theory notation
